# Solvitaire

./: .all-contributorsrc  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  FinalDepthRandomGames.sh  README.md  Solvataire simple commands.txt  benchmark.py  build-instructions.md  build.sh  clean-build.sh  cleanup.sh  conanfile.txt  copyright.txt  docker-compose.debug.yml  docker-install.bat  docker-install.sh  enter-container.bat  enter-container.sh  generate-results.sh  log  optimisation-test.py  real-benchmark.sh  sample100.txt  solv.callgrind  solv.prof  solvability-fileseeds.sh  solvability-start.sh  solvability.sh  solvitaire  solvitaire-debug  stuck2.solvitaire.out  stuck2.wolter.initial  unit-tests  unit-tests-debug
analysis/: patience.R
archive/: README.md  build-notes.md  canfield-check.py  generate-results-optimisations-off.sh  optimisation-test.py  repeat_deal.sh
archive/docs/: project-tools.md
archive/docs/supervisor-meetings/: 2017-09-25.md  2017-10-03.md  2017-10-12.md  2017-10-17.md  2017-11-07.md  2017-11-14.md  2017-11-28.md  2018-02-01.md  2018-02-08.md
customRules/: Klondike.json
docs/: windows_cheat_sheet.md
docs/DOER-document/: main.tex  references.bib
docs/supervisor-meetings/: 2017-09-12.md  2017-09-19.md  2017-10-24.md  2017-10-31.md
resources/: bakers-dozen.json  black-hole.json  canfield.json  default.json  flower-garden.json  fortunes-favor.json  free-cell.json  input-file-schema.json  positional_games.json  simple-alpha-star.json  simple-bakers-dozen.json  simple-black-hole.json  simple-canfield.json  simple-flower-garden.json  simple-free-cell.json  simple-somerset.json  simple-spanish-patience.json  simple-spider.json  somerset.json  spanish-patience.json  spider.json
resources/deal-presets/: ImpossibleFreeCell11982.json  alinaSF100.json  bg0.json  bg1.json  bg10.json  bg14.json  err_klondike.json  klondikeSM1.json  klondikeSM2.json  raglan-ipg.json  shootMeKlondikeConverter.py
resources/rules-presets/: alpha-star.json  bakers-dozen.json  black-hole.json  canfield.json  default.json  simple-alpha-star.json  simple-bakers-dozen.json  simple-black-hole.json  simple-flower-garden.json  simple-fortunes-favor.json  simple-somerset.json  simple-spanish-patience.json  simple-spider.json  spider.json
results/: fan-solvability.txt  fore-cell-solvability.txt  free-cell-0-cell-solvability.txt  free-cell-1-cell-solvability.txt  free-cell-3-cell-solvability.txt  free-cell-4-pile-solvability.txt  free-cell-6-pile-solvability.txt  klondike-solvability-INTRACT.txt  klondike-solvability.txt  penguin-solvability.txt  raglan-solvability.txt  smart-alpha-star-solvability.txt
results/SH_project/black-hole-variants/: black-hole-10-pile-solvability.txt  black-hole-11-pile-solvability.txt  black-hole-12-pile-solvability.txt  black-hole-14-pile-solvability.txt  black-hole-15-pile-solvability.txt  black-hole-16-pile-solvability.txt  black-hole-19-pile-solvability.txt  black-hole-22-pile-solvability.txt
results/SH_project/lower-bounds/: castles-of-spain-solvability.txt  east-haven-solvability.txt  spiderette-solvability.txt  will-o-the-wisp-solvability.txt
results/SH_project/solvability/: alpha-star-solvability.txt  delta-star-solvability.txt  eight-off-any-card-spaces-solvability.txt  flower-garden-solvability.txt  free-cell-7-pile-solvability.txt  free-cell-solvability.txt  one-cell-solvability.txt  penguin-solvability.txt  two-cell-solvability.txt
results/black-hole-variants/: black-hole-13-pile-solvability.txt  black-hole-17-pile-solvability.txt  black-hole-18-pile-solvability.txt  black-hole-20-pile-solvability.txt  black-hole-21-pile-solvability.txt
results/intractable/: east-haven-solvability.txt  klondike-solvability.txt  northwest-territory-solvability.txt  spanish-patience-solvability.txt  will-o-the-wisp-solvability.txt
results/lower-bounds/: blind-alleys-solvability.txt  flower-garden-solvability.txt  spanish-patience-solvability.txt
results/solvability/: bakers-game-solvability.txt  black-hole-solvability.txt  canfield-solvability.txt  castles-of-spain-solvability.txt  eight-off-solvability.txt  fortunes-favor-solvability.txt  free-cell-2-cell-solvability.txt  free-cell-5-pile-solvability.txt  king-albert-solvability.txt  martha-solvability.txt  penguin-solvability.txt  sea-towers-solvability.txt  somerset-solvability.txt
rules/: american-canister.json  beleaguered-castle.json  british-canister.json  canister-warfield.json  canister.json  klondike-two-deck-9.json  lancaster.json  mrs-mop.json  pas-seul.json  siegecraft.json  stronghold.json  thirty.json  thirtysix.json  trigon.json  worm-hole.json
src/main/: Card.cpp  Card.h  black_hole_state.cpp  black_hole_state.h  card.cpp  card.h  command_line_helper.cpp  command_line_helper.h  deal_parser.cpp  deal_parser.h  game_state.cpp  game_state.h  io_utils.cpp  io_utils.h  legacy_card.cpp  legacy_card.h  legacy_main.cpp  log_helper.h  main.cpp  pile.cpp  pile.h  sol_rules.cpp  sol_rules.h  solver.cpp  solver.h  version.h
src/main/evaluation/: benchmark.cpp  benchmark.h  binomial_ci.cpp  binomial_ci.h  solvability_calc.cpp  solvability_calc.h
src/main/game/: card.cpp  card.h  game_state.cpp  game_state.h  game_state.legal_moves.cpp  global_cache.cpp  global_cache.h  move.cpp  move.h  pile.cpp  pile.h  sol_rules.cpp  sol_rules.h
src/main/input-output/: command_line_helper.cpp  command_line_helper.h  deal_parser.cpp  deal_parser.h  log_helper.h  rules_parser.cpp  rules_parser.h  sol_preset_types.cpp
src/main/solvability/: solvability_calc.cpp  solvability_calc.h
src/main/solver/: solver.cpp  (+1 more)
src/test/: all_tests.cpp  alpha_star_test.cpp  bakers_dozen_test.cpp  black_hole_test.cpp  canfield_test.cpp  card_test.cpp  check_for_no_trailing_space_in_output.py  deal_parser_test.cpp  flower_garden_test.cpp  fortunes_favor_test.cpp  foundations_dominance_test.cpp  free_cell_test.cpp  gloabl_cache_test.cpp  global_cache_test.cpp  main_test.cpp  pile_test.cpp  rules_parser_test.cpp  somerset_test.cpp  spanish_patience_test.cpp  spider_test.cpp  test_helper.cpp  test_helper.h
(+115 files in other folders)
